refactor(doclet): configure Jackson mapper and clean up code
Set DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS disabled and

DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES enabled on the

doclet's JsonMapper so dates serialize as ISO strings and unknown

properties are rejected.

Replace Math.max(0, Math.min(...)) with Math.clamp and use

ObjectNode.toString() instead of writeValueAsString() to avoid

redundant serialization.

Remove unnecessary @Tag annotations from test classes that already

extend tagged base classes, fix indentation in ChunkWriterTest,

and add UnitTest inheritance to FloatArrayConverterTest.